[package]
name = "option-ext"
description = "Extends `Option` with additional operations"
version = "0.2.0"
authors = ["Simon Ochsenreither <simon@ochsenreither.de>"]
categories = ["rust-patterns", "algorithms"]
documentation = "https://docs.rs/option-ext/"
repository = "https://github.com/soc/option-ext.git"
homepage = "https://github.com/soc/option-ext"
readme = "README.md"
license = "MPL-2.0"


# The following notice applies to all the files in this source tree:
#
#     This Source Code Form is subject to the terms of the Mozilla Public
#     License, v. 2.0. If a copy of the MPL was not distributed with this
#     file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# (If you copy files from this project into another program which is not
# licenced MPL-2.0, you should add that notice to each copied file.)
